syntax = "proto3";

option csharp_namespace = "Server";

package data;

// The greeting service definition.
service DataService {
  // Sends a greeting
  rpc SayHello1 (HelloRequest1) returns (HelloReply1);
}

// The request message containing the user's name.
message HelloRequest1 {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply1 {
  string message = 1;
}
